--- a/.github/workflows/deploy-github-pages.yml
+++ b/.github/workflows/deploy-github-pages.yml
@@ -15,23 +15,30 @@ env:
   # When using "Q&A"s, you can enable search: (set to 'true' / 'false')
   NG_USE_Q_AND_A_SEARCH: 'true'
   #
+  # Use the language-switcher to switch between Regions (set to 'true' / 'false')
+  NG_USE_REGION_PER_LOCALE: 'true'
+  #
   # For demo-purpose only: A highly visible label to show instance name/version
-  ENV_NAME: ''
+  ENV_NAME: 'Example Multilingual'
   #
   # ###########################################################################
   # TEXT CONTENT:
   # ###########################################################################
   #
   # A (short) name, visible in the top (navigation-)bar and in the browser's tab/window-title (and search-engine results)
-  TXT_APP_NAME: ''
+  TXT_APP_NAME: 'Helpful Multilingual Example'
   # An absolute/data-URL to an image, visible in the top (navigation-)bar
-  TXT_APP_LOGO_URL: ''
+  TXT_APP_LOGO_URL: 'https://avatars.githubusercontent.com/u/136691409'
   # The first heading, (only) visible on the main-page
-  TXT_MAIN_PAGE_HEADER: ''
+  TXT_MAIN_PAGE_HEADER: 'Welcome, مرحبا, Welkom'
   # The (optional) introduction text, (only) visible on the main-page.
   # Can be multiple-lines of Markdown syntax or contain some HTML. Newlines need to be specified with `\n` or `<br />`.
   TXT_MAIN_PAGE_INTRO: >-
+    This example-site shows how you can provide Helpful Information in multiple languages. \n
     \n
+    اختر لغتك:\n
+    Choose your language:\n
+    Kies je taal:\n
     \n
   #
   # An (optional) notice on the bottom of the screen, can be overwritten by the sheet.
@@ -61,13 +68,21 @@ env:
   #
   # The URL-part(s) to identify the region
   REGIONS: >-
-    info
+    ar,
+    en,
+    nl,
+
   # The readable label(s) on the link to the region-page
   REGIONS_LABELS: >-
-    Information
+    العربية,
+    English,
+    Nederlands,
+
   # The ID of the Google Sheet(s) that contains the content for the region
   REGIONS_SHEET_IDS: >-
-    xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+    test-sheet-id-3-language-ar,
+    test-sheet-id-1,
+    test-sheet-id-2-language-nl,
 
 # #############################################################################
 #
@@ -135,9 +150,41 @@ jobs:
         env:
           # See all variables: https://github.com/rodekruis/helpful-information/blob/main/.env.example
           NG_PRODUCTION: 'true'
-          GOOGLE_SHEETS_API_KEY: ${{ secrets.GOOGLE_SHEETS_API_KEY }}
-          GOOGLE_SHEETS_API_URL: 'https://sheets.googleapis.com/v4/spreadsheets'
+          GOOGLE_SHEETS_API_KEY: ''
+          GOOGLE_SHEETS_API_URL: '/example-multilingual/data'
           AI_CONNECTION_STRING: ${{ secrets.AI_CONNECTION_STRING }}
+
+      - name: Use Local Data
+        run: |
+          cd helpful-information/data/test-sheet-id-3-language-ar/values/
+          mv "Referral Page.json"   "Referral Page"
+          mv "Categories.json"      "Categories"
+          mv "Sub-Categories.json"  "Sub-Categories"
+          mv "Offers.json"          "Offers"
+          mv "Q&As.json"            "Q&As"
+          cd ../../../../
+          mkdir -p www/data/test-sheet-id-3-language-ar/
+          mv helpful-information/data/test-sheet-id-3-language-ar/values/ www/data/test-sheet-id-3-language-ar/
+
+          cd helpful-information/data/test-sheet-id-1/values/
+          mv "Referral Page.json"   "Referral Page"
+          mv "Categories.json"      "Categories"
+          mv "Sub-Categories.json"  "Sub-Categories"
+          mv "Offers.json"          "Offers"
+          mv "Q&As.json"            "Q&As"
+          cd ../../../../
+          mkdir -p www/data/test-sheet-id-1/
+          mv helpful-information/data/test-sheet-id-1/values/ www/data/test-sheet-id-1/
+
+          cd helpful-information/data/test-sheet-id-2-language-nl/values/
+          mv "Referral Page.json"   "Referral Page"
+          mv "Categories.json"      "Categories"
+          mv "Sub-Categories.json"  "Sub-Categories"
+          mv "Offers.json"          "Offers"
+          mv "Q&As.json"            "Q&As"
+          cd ../../../../
+          mkdir -p www/data/test-sheet-id-2-language-nl/
+          mv helpful-information/data/test-sheet-id-2-language-nl/values/ www/data/test-sheet-id-2-language-nl/
 
       - name: Add 404.html
         run: 'cp www/index.html www/404.html'
