fix: Urls to Static pages

--- a/.github/workflows/deploy-github-pages.yml
+++ b/.github/workflows/deploy-github-pages.yml
@@ -73,8 +73,8 @@ env:
   TXT_MAIN_FOOTER: >-
     **Helpful Information**  \n
     \n
-    [About](/about)  \n
-    [Privacy](/privacy)  \n
+    [About](/example/about)  \n
+    [Privacy](/example/privacy)  \n
   #
   # Contents of the 'error-page'
   #
