--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "private": true,
   "engines": {
-    "node": ">=20"
+    "node": ">=22"
   },
   "dependencies": {
-    "helpful-information": "https://github.com/rodekruis/helpful-information/tarball/develop"
+    "helpful-information": "https://github.com/rodekruis/helpful-information/tarball/v24.06.0"
   }
 }
