--- a/.github/workflows/deploy-github-pages.yml
+++ b/.github/workflows/deploy-github-pages.yml
@@ -31,7 +31,7 @@ env:
   # A (short) name, visible in the top (navigation-)bar and in the browser's tab/window-title (and search-engine results)
   TXT_APP_NAME: 'Helpful \n Information'
   # An absolute/data-URL to an image, visible in the top (navigation-)bar
-  TXT_APP_LOGO_URL: 'https://avatars.githubusercontent.com/u/136691409'
+  TXT_APP_LOGO_URL: 'https://helpful-info.github.io/example-multilingual/files/helpful-info_logo.webp'
   # The first heading, (only) visible on the main-page
   TXT_MAIN_PAGE_HEADER: 'Welcome, مرحبا, Welkom'
   # The (optional) introduction text, (only) visible on the main-page.
