fix: Pin to working Node.js version

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "engines": {
-    "node": ">=22"
+    "node": "^22.5.1"
   },
   "dependencies": {
     "helpful-information": "https://github.com/rodekruis/helpful-information/tarball/develop"
