--- a/.github/workflows/deploy-github-pages.yml
+++ b/.github/workflows/deploy-github-pages.yml
@@ -196,7 +196,8 @@ jobs:
           NG_PRODUCTION: 'true'
           GOOGLE_SHEETS_API_KEY: ''
           GOOGLE_SHEETS_API_URL: '/example-multilingual/data'
-          AI_CONNECTION_STRING: ${{ secrets.AI_CONNECTION_STRING }}
+          MATOMO_CONNECTION_STRING: ${{ vars.MATOMO_CONNECTION_STRING }}
+          AI_CONNECTION_STRING: ${{ vars.AI_CONNECTION_STRING }}
 
       - name: Use Local Data
         run: |
